tests/script_runtime_errors/function_error_2/error.txt
Error: 
    3 | math::max("snot", a)
      | ^^^^^^^^^^^^^^^^^^^^ Bad type passed to function math::max/2